--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 /* Background Image with Parallax Effect */
 body {
-    background-image: url('img/BG3.png');
+    background-image: url('img/Background porto.webp');
     background-attachment: fixed;
     background-size: cover;
     background-repeat: no-repeat;
